Fix wordwrap

--- a/src/components/room/Chat/Message.scss
+++ b/src/components/room/Chat/Message.scss
@@ -1,28 +1,27 @@
-#Chat {
-  .Message {
-    background: #ffffff;
+#Chat .Message {
+  background: #ffffff;
+  word-wrap: break-word;
 
-    &:hover {
-      background: #f4f4f4;
+  &:hover {
+    background: #f4f4f4;
+  }
+
+  .title-bar {
+    display: flex;
+    justify-content: space-between;
+    font-weight: bold;
+
+    span {
+      display: block;
     }
 
-    .title-bar {
-      display: flex;
-      justify-content: space-between;
-      font-weight: bold;
-
-      span {
-        display: block;
-      }
-
-      .timestamp {
-        color: rgba(0, 0, 0, 0.4);
-      }
+    .timestamp {
+      color: rgba(0, 0, 0, 0.4);
     }
+  }
 
-    p {
-      color: #555555;
-      margin-bottom: 0;
-    }
+  p {
+    color: #555555;
+    margin-bottom: 0;
   }
 }
